[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/Levels/Menus/Options.gd" type="Script" id=2]

[node name="Options" type="Popup"]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -800.0
margin_top = -400.0
margin_right = 800.0
margin_bottom = 400.0
script = ExtResource( 2 )

[node name="Background" type="ColorRect" parent="."]
margin_right = 1600.0
margin_bottom = 800.0

[node name="TabContainer" type="TabContainer" parent="."]
margin_right = 1600.0
margin_bottom = 800.0
tab_align = 0

[node name="Gameplay" type="Tabs" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
tab_align = 0

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/Gameplay"]
margin_right = 40.0
margin_bottom = 40.0

[node name="GridContainer" type="GridContainer" parent="TabContainer/Gameplay/MarginContainer"]
margin_right = 251.0
margin_bottom = 128.0
columns = 2

[node name="TIMER LABEL" type="Label" parent="TabContainer/Gameplay/MarginContainer/GridContainer"]
margin_top = 13.0
margin_right = 171.0
margin_bottom = 27.0
text = "TIMER LABEL ENABLED"

[node name="CheckButton" type="CheckButton" parent="TabContainer/Gameplay/MarginContainer/GridContainer"]
margin_left = 175.0
margin_right = 251.0
margin_bottom = 40.0
align = 2
icon_align = 2

[node name="COIN LABEL" type="Label" parent="TabContainer/Gameplay/MarginContainer/GridContainer"]
margin_top = 57.0
margin_right = 171.0
margin_bottom = 71.0
text = "COIN LABEL ENABLED"

[node name="CheckButton2" type="CheckButton" parent="TabContainer/Gameplay/MarginContainer/GridContainer"]
margin_left = 175.0
margin_top = 44.0
margin_right = 251.0
margin_bottom = 84.0
pressed = true
align = 2
icon_align = 2

[node name="DEATH COUNTER" type="Label" parent="TabContainer/Gameplay/MarginContainer/GridContainer"]
margin_top = 101.0
margin_right = 171.0
margin_bottom = 115.0
text = "DEATH COUNTER ENABLED"

[node name="CheckButton3" type="CheckButton" parent="TabContainer/Gameplay/MarginContainer/GridContainer"]
margin_left = 175.0
margin_top = 88.0
margin_right = 251.0
margin_bottom = 128.0
pressed = true
align = 2
icon_align = 2

[node name="SAVE" type="Tabs" parent="TabContainer"]
margin_left = 4.0
margin_top = 32.0
margin_right = 1596.0
margin_bottom = 796.0
tab_align = 0

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/SAVE"]
margin_right = 40.0
margin_bottom = 40.0

[node name="GridContainer" type="GridContainer" parent="TabContainer/SAVE/MarginContainer"]
margin_right = 83.0
margin_bottom = 44.0

[node name="Save" type="Button" parent="TabContainer/SAVE/MarginContainer/GridContainer"]
margin_right = 83.0
margin_bottom = 20.0
text = "SAVE"

[node name="DeleteSave" type="Button" parent="TabContainer/SAVE/MarginContainer/GridContainer"]
margin_top = 24.0
margin_right = 83.0
margin_bottom = 44.0
text = "RESET SAVE"

[node name="EXIT" type="Button" parent="."]
margin_left = 1560.0
margin_right = 1600.0
margin_bottom = 25.0
text = "EXIT"

[connection signal="toggled" from="TabContainer/Gameplay/MarginContainer/GridContainer/CheckButton" to="." method="_on_CheckButton_toggled"]
[connection signal="toggled" from="TabContainer/Gameplay/MarginContainer/GridContainer/CheckButton2" to="." method="_on_CheckButton2_toggled"]
[connection signal="toggled" from="TabContainer/Gameplay/MarginContainer/GridContainer/CheckButton3" to="." method="_on_CheckButton3_toggled"]
[connection signal="pressed" from="TabContainer/SAVE/MarginContainer/GridContainer/Save" to="." method="_on_Save_pressed"]
[connection signal="pressed" from="TabContainer/SAVE/MarginContainer/GridContainer/DeleteSave" to="." method="_on_DeleteSave_pressed"]
[connection signal="pressed" from="EXIT" to="." method="_on_EXIT_pressed"]
